[gd_scene load_steps=4 format=3 uid="uid://bbkpe3wert27p"]

[ext_resource type="Script" uid="uid://hmwexdxj3n74" path="res://components/automation/automation_dashboard.gd" id="1_iyk1q"]
[ext_resource type="Script" uid="uid://x0vyalkvgq41" path="res://scripts/api_client.gd" id="2_6gn45"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6gn45"]

[node name="AutomationDashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iyk1q")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02745098, 0.078431375, 0.05490196, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="MainLayout" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ConfigPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputLabel" type="Label" parent="MarginContainer/MainLayout/ConfigPanel"]
layout_mode = 2
text = "Input Settings"

[node name="BlockListScroll" type="ScrollContainer" parent="MarginContainer/MainLayout/ConfigPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputWrapper" type="VBoxContainer" parent="MarginContainer/MainLayout/ConfigPanel/BlockListScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="BlockList" type="VBoxContainer" parent="MarginContainer/MainLayout/ConfigPanel/BlockListScroll/InputWrapper"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AddBlockBtn" type="Button" parent="MarginContainer/MainLayout/ConfigPanel/BlockListScroll/InputWrapper"]
unique_name_in_owner = true
layout_mode = 2
text = "+ Add Input"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MainLayout/ConfigPanel"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="MarginContainer/MainLayout/ConfigPanel"]
layout_mode = 2
text = "Output Settings"

[node name="TargetColInput" type="LineEdit" parent="MarginContainer/MainLayout/ConfigPanel"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "New or Existing Column Name..."

[node name="ResumeCheck" type="CheckBox" parent="MarginContainer/MainLayout/ConfigPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Only process empty rows (Resume)"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/MainLayout"]
layout_mode = 2

[node name="PreviewPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2

[node name="PreviewLabel" type="Label" parent="MarginContainer/MainLayout/PreviewPanel"]
layout_mode = 2
text = "Request Preivew"

[node name="PreviewText" type="TextEdit" parent="MarginContainer/MainLayout/PreviewPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/MainLayout"]
layout_mode = 2

[node name="ApiPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ApiSettingsLabel" type="Label" parent="MarginContainer/MainLayout/ApiPanel"]
layout_mode = 2
text = "API Settings"

[node name="SettingsGrid" type="HBoxContainer" parent="MarginContainer/MainLayout/ApiPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TempContainer" type="VBoxContainer" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TempLabel" type="Label" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid/TempContainer"]
layout_mode = 2
text = "Temperature"

[node name="TempInput" type="SpinBox" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid/TempContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0
step = 0.05
value = 0.7

[node name="MaxTokensContainer" type="VBoxContainer" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MaxTokensLabel" type="Label" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid/MaxTokensContainer"]
layout_mode = 2
text = "Max Tokens"

[node name="MaxTokensInput" type="SpinBox" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid/MaxTokensContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 512.0
max_value = 131072.0
step = 512.0
value = 4096.0
allow_greater = true

[node name="WaitContainer" type="VBoxContainer" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WaitLabel" type="Label" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid/WaitContainer"]
layout_mode = 2
text = "Wait (sec)"

[node name="WaitInput" type="SpinBox" parent="MarginContainer/MainLayout/ApiPanel/SettingsGrid/WaitContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 600.0
step = 0.1
value = 0.1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MainLayout/ApiPanel"]
layout_mode = 2

[node name="EndpointSettingsLabel" type="Label" parent="MarginContainer/MainLayout/ApiPanel"]
layout_mode = 2
text = "Endpoint Settings"

[node name="ApiBlockScroll" type="ScrollContainer" parent="MarginContainer/MainLayout/ApiPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="EndpointWrapper" type="VBoxContainer" parent="MarginContainer/MainLayout/ApiPanel/ApiBlockScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="ApiBlockList" type="VBoxContainer" parent="MarginContainer/MainLayout/ApiPanel/ApiBlockScroll/EndpointWrapper"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 11

[node name="AddApiBtn" type="Button" parent="MarginContainer/MainLayout/ApiPanel/ApiBlockScroll/EndpointWrapper"]
unique_name_in_owner = true
layout_mode = 2
text = "+ Add Endpoint"

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/MainLayout"]
layout_mode = 2

[node name="RunPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2

[node name="CloseBtn" type="Button" parent="MarginContainer/MainLayout/RunPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Minimize"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MainLayout/RunPanel"]
layout_mode = 2
theme_override_constants/separation = 14
theme_override_styles/separator = SubResource("StyleBoxEmpty_6gn45")

[node name="StartBtn" type="Button" parent="MarginContainer/MainLayout/RunPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="StopBtn" type="Button" parent="MarginContainer/MainLayout/RunPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Stop"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/MainLayout/RunPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="LogsLabel" type="Label" parent="MarginContainer/MainLayout/RunPanel"]
layout_mode = 2
text = "Logs"

[node name="Logs" type="TextEdit" parent="MarginContainer/MainLayout/RunPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Logs will appear here..."
editable = false
wrap_mode = 1

[node name="ApiClient" type="Node" parent="."]
script = ExtResource("2_6gn45")
